--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
+    <div class="dedicated-song">
+      <h2>Dedicated Song</h2>
+      <p>Here's a song dedicated to you:</p>
+      <iframe src="https://open.spotify.com/embed/track/7eadaD2SBArRbebB9CP70X?si=47abcff59e7240ab" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+
     
 
   </div>
