--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="six">
       <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
-     
+      <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
@@ -129,10 +129,6 @@
   <p>Here's a song dedicated to you:</p>
   <iframe src="https://open.spotify.com/embed/track/7eadaD2SBArRbebB9CP70X?si=47abcff59e7240ab" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
-
-  
-
-    
 
   </div>
 </body>
